--- a/src/learn_TensorFlow2.0/learn_TensorFlow2.0.ipynb
+++ b/src/learn_TensorFlow2.0/learn_TensorFlow2.0.ipynb
@@ -133,25 +133,293 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 计算图\n",
+    "有三种计算图的构建方式：静态计算图，动态计算图，以及Autograph.\n",
+    "\n",
+    "在TensorFlow1.0时代，采用的是静态计算图，需要先使用TensorFlow的各种算子创建计算图，然后再开启一个会话Session，显式执行计算图。\n",
+    "\n",
+    "而在TensorFlow2.0时代，采用的是动态计算图，即每使用一个算子后，该算子会被动态加入到隐含的默认计算图中立即执行得到结果，而无需开启Session。\n",
+    "\n",
+    "使用动态计算图即Eager Excution的好处是方便调试程序，它会让TensorFlow代码的表现和Python原生代码的表现一样，写起来就像写numpy一样，各种日志打印，控制流全部都是可以使用的。\n",
+    "\n",
+    "使用动态计算图的缺点是运行效率相对会低一些。因为使用动态图会有许多次Python进程和TensorFlow的C++进程之间的通信。而静态计算图构建完成之后几乎全部在TensorFlow内核上使用C++代码执行，效率更高。此外静态图会对计算步骤进行一定的优化，剪去和结果无关的计算步骤。\n",
+    "\n",
+    "如果需要在TensorFlow2.0中使用静态图，可以使用@tf.function装饰器将普通Python函数转换成对应的TensorFlow计算图构建代码。运行该函数就相当于在TensorFlow1.0中用Session执行代码。使用tf.function构建静态图的方式叫做 Autograph."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 参考 : [eat_tensorflow2_in_30_days/2-2,三种计算图.md](https://github.com/lyhue1991/eat_tensorflow2_in_30_days/blob/master/2-2,%E4%B8%89%E7%A7%8D%E8%AE%A1%E7%AE%97%E5%9B%BE.md)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-36e047526050>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-36e047526050>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    hello world\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 动态计算图在每个算子处都进行构建，构建后立即执行\n",
+    "\n",
+    "x = tf.constant(\"hello\")\n",
+    "y = tf.constant(\"world\")\n",
+    "z = tf.strings.join([x,y],separator=\" \")\n",
+    "\n",
+    "tf.print(z)\n",
+    "hello world\n",
+    "# 可以将动态计算图代码的输入和输出关系封装成函数\n",
+    "\n",
+    "def strjoin(x,y):\n",
+    "    z =  tf.strings.join([x,y],separator = \" \")\n",
+    "    tf.print(z)\n",
+    "    return z\n",
+    "\n",
+    "result = strjoin(tf.constant(\"hello\"),tf.constant(\"world\"))\n",
+    "print(result)\n",
+    "hello world\n",
+    "tf.Tensor(b'hello world', shape=(), dtype=string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# 使用autograph构建静态图\n",
+    "\n",
+    "@tf.function\n",
+    "def strjoin(x,y):\n",
+    "    z =  tf.strings.join([x,y],separator = \" \")\n",
+    "    tf.print(z)\n",
+    "    return z\n",
+    "\n",
+    "result = strjoin(tf.constant(\"你好\"),tf.constant(\"世界\"))\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(-2.0, shape=(), dtype=float32)\n",
+      "-2\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# f(x) = a*x**2 + b*x + c的导数\n",
+    "\n",
+    "\n",
+    "x = tf.Variable(0.0,name = \"x\",dtype = tf.float32)\n",
+    "a = tf.constant(1.0)\n",
+    "b = tf.constant(-2.0)\n",
+    "c = tf.constant(1.0)\n",
+    "\n",
+    "@tf.function\n",
+    "def Derivation_of_quadratic(x,a,b,c):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        y = a*tf.pow(x,2) + b*x + c\n",
+    "    \n",
+    "    dy_dx = tape.gradient(y,x)\n",
+    "    return dy_dx\n",
+    "    \n",
+    "result = Derivation_of_quadratic(x,a,b,c)\n",
+    "print(result)\n",
+    "tf.print(result)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-2, 1)\n",
+      "(0, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "@tf.function\n",
+    "def f(x):   \n",
+    "    a = tf.constant(1.0)\n",
+    "    b = tf.constant(-2.0)\n",
+    "    c = tf.constant(1.0)\n",
+    "    \n",
+    "    # 自变量转换成tf.float32\n",
+    "    x = tf.cast(x,tf.float32)\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        tape.watch(x)\n",
+    "        y = a*tf.pow(x,2)+b*x+c\n",
+    "    dy_dx = tape.gradient(y,x) \n",
+    "    \n",
+    "    return((dy_dx,y))\n",
+    "\n",
+    "tf.print(f(tf.constant(0.0)))\n",
+    "tf.print(f(tf.constant(1.0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tracing\n",
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=2>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np \n",
+    "\n",
+    "@tf.function(autograph=True)\n",
+    "def myadd(a,b):\n",
+    "    for i in tf.range(3):\n",
+    "        tf.print(i)\n",
+    "    c = a+b\n",
+    "    print(\"tracing\")\n",
+    "    return c\n",
+    "\n",
+    "myadd(1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "# 创建日志\n",
+    "import os\n",
+    "stamp = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "logdir = os.path.join('data', 'autograph', stamp)\n",
+    "\n",
+    "## 在 Python3 下建议使用 pathlib 修正各操作系统的路径\n",
+    "# from pathlib import Path\n",
+    "# stamp = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "# logdir = str(Path('./data/autograph/' + stamp))\n",
+    "\n",
+    "writer = tf.summary.create_file_writer(logdir)\n",
+    "\n",
+    "#开启autograph跟踪\n",
+    "tf.summary.trace_on(graph=True, profiler=True) \n",
+    "\n",
+    "#执行autograph\n",
+    "result = strjoin(\"hello\",\"world\")\n",
+    "# result = Derivation_of_quadratic(x,a,b,c)\n",
+    "#tf.print(f(tf.constant(0.0)))\n",
+    "#result = myadd(1,1)\n",
+    "\n",
+    "#将计算图信息写入日志\n",
+    "with writer.as_default():\n",
+    "    tf.summary.trace_export(\n",
+    "        name=\"autograph\",\n",
+    "        step=0,\n",
+    "        profiler_outdir=logdir)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#启动 tensorboard在jupyter中的魔法命令\n",
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#启动tensorboard\n",
+    "%tensorboard --logdir ./data/autograph/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:NLP_DEMO]",
+   "display_name": "Python [conda env:nlp_tf2]",
    "language": "python",
-   "name": "conda-env-NLP_DEMO-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "name": "conda-env-nlp_tf2-py"
   },
   "toc": {
    "base_numbering": 1,
