--- a/src/NLP_visualization/Visual test.ipynb
+++ b/src/NLP_visualization/Visual test.ipynb
@@ -982,7 +982,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 2000/2000 [00:00<00:00, 10958.30it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████| 2000/2000 [00:00<00:00, 12455.69it/s]"
      ]
     },
     {
@@ -1081,44 +1081,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "100%|██████████████████████████████████████████████████████████████████████████| 2000/2000 [00:00<00:00, 668361.72it/s]\n"
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow' has no attribute 'Session'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-d30e86b4a364>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mlog_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'logs'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[1;31m# tf.assign():这里是一个将具体数值（即，词向量矩阵）赋值给tf Variable的例子：\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0.0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'embedding'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'Session'"
      ]
     }
    ],
    "source": [
+    "# tf1 版本\n",
     "import tensorflow as tf\n",
     "from tensorflow.contrib.tensorboard.plugins import projector\n",
+    "\n",
+    "\n",
     "import os\n",
     "log_path = 'logs'\n",
     "\n",
@@ -1151,63 +1134,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From D:\\ProgramData\\Anaconda3\\envs\\tf2\\lib\\site-packages\\tensorflow_core\\python\\compat\\v2_compat.py:88: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "Traceback (most recent call last):\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\Scripts\\tensorboard-script.py\", line 10, in <module>\n",
-      "    sys.exit(run_main())\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\main.py\", line 64, in run_main\n",
-      "    app.run(tensorboard.main, flags_parser=tensorboard.configure)\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\absl\\app.py\", line 299, in run\n",
-      "    _run_main(main, args)\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\absl\\app.py\", line 250, in _run_main\n",
-      "    sys.exit(main(argv))\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\program.py\", line 228, in main\n",
-      "    server = self._make_server()\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\program.py\", line 309, in _make_server\n",
-      "    self.assets_zip_provider)\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\backend\\application.py\", line 161, in standard_tensorboard_wsgi\n",
-      "    reload_task)\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\backend\\application.py\", line 194, in TensorBoardWSGIApp\n",
-      "    return TensorBoardWSGI(plugins, path_prefix)\n",
-      "  File \"D:\\ProgramData\\Anaconda3\\envs\\NLP_DEMO\\lib\\site-packages\\tensorboard\\backend\\application.py\", line 245, in __init__\n",
-      "    raise ValueError('Duplicate plugins for name %s' % plugin.plugin_name)\n",
-      "ValueError: Duplicate plugins for name projector\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 2000/2000 [00:00<00:00, 401023.42it/s]\n"
      ]
     }
    ],
    "source": [
-    "!tensorboard --logdir='./logs/'"
+    "\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "tf.disable_v2_behavior()\n",
+    "\n",
+    "\n",
+    "from tensorboard.plugins import projector\n",
+    "\n",
+    "\n",
+    "# tf.compat.v1.disable_eager_execution()\n",
+    "# sess = tf.compat.v1.Session()\n",
+    "\n",
+    "import os\n",
+    "log_path = 'logs'\n",
+    "\n",
+    "with tf.compat.v1.Session() as sess:\n",
+    "    # tf.assign():这里是一个将具体数值（即，词向量矩阵）赋值给tf Variable的例子：\n",
+    "    X = tf.Variable([0.0], name='embedding')\n",
+    "    place = tf.placeholder(tf.float32, shape=[len(words), vector_size])\n",
+    "    set_x = tf.assign(X, place, validate_shape=False)\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    sess.run(set_x, feed_dict={place: embeddings})\n",
+    " \n",
+    "    # 需要保存一个metadata文件,给词典里每一个词分配一个身份\n",
+    "    with open(log_path + '/metadata.tsv', 'w') as f:\n",
+    "        for word in tqdm(words):\n",
+    "            f.write(word + '\\n')\n",
+    "    \n",
+    "    # 写 TensorFlow summary\n",
+    "    summary_writer = tf.summary.FileWriter(log_path, sess.graph)\n",
+    "    config = projector.ProjectorConfig()\n",
+    "    embedding_conf = config.embeddings.add()\n",
+    "    embedding_conf.tensor_name = 'embedding'\n",
+    "    embedding_conf.metadata_path = os.path.join(log_path, 'metadata.tsv')\n",
+    "    projector.visualize_embeddings(summary_writer, config)\n",
+    "    \n",
+    "    # 保存模型\n",
+    "    # word2vec参数的单词和词向量部分分别保存到了metadata和ckpt文件里面\n",
+    "    saver = tf.train.Saver()\n",
+    "    saver.save(sess, os.path.join(log_path, \"model.ckpt\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualisation(vectors):\n",
+    "    \"\"\"\n",
+    "    param: 需要可视化的高维向量集合, list, [SAMPLE_NUM, dim]\n",
+    "    return: None\n",
+    "    \"\"\"\n",
+    "    # PROJECTOR可视化的都是TensorFlow中的变量类型。\n",
+    "    y = tf.Variable(vectors)\n",
+    "    checkpoint = tf.train.Checkpoint(embedding=y)\n",
+    "    checkpoint.save(os.path.join(LOG_DIR, \"embedding.ckpt\"))\n",
+    "\n",
+    "    # 通过project.ProjectorConfig类来帮助生成日志文件\n",
+    "    config = projector.ProjectorConfig()\n",
+    "    # 增加一个需要可视化的embedding结果\n",
+    "    embedding = config.embeddings.add()\n",
+    "    # 指定这个embedding结果所对应的Tensorflow变量名称\n",
+    "    embedding.tensor_name = \"embedding/.ATTRIBUTES/VARIABLE_VALUE\"\n",
+    "\n",
+    "    # 指定embedding结果所对应的数据标签文件,改设置可选, 如果没有提供，可视化结果\n",
+    "    # 每个点颜色都是一样的\n",
+    "    embedding.metadata_path = META_FIEL\n",
+    "\n",
+    "    # 指定sprite 图像。这个也是可选的，如果没有提供sprite 图像，那么可视化的结果\n",
+    "    # 每一个点就是一个小困点，而不是具体的图片。\n",
+    "    embedding.sprite.image_path = SPRITE_FILE\n",
+    "    # 这将用于从sprite图像中截取正确的原始图片。\n",
+    "    embedding.sprite.single_image_dim.extend([IMAGE_SIZE, IMAGE_SIZE])\n",
+    "\n",
+    "    # 将PROJECTOR所需要的内容写入日志文件。\n",
+    "    projector.visualize_embeddings(LOG_DIR, config)\n",
+    "\n",
+    "if __name__==\"__main__\":\n",
+    "    vectors = create_sprite_image_and_label()\n",
+    "    visualisation(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://zhuanlan.zhihu.com/p/147332455 高维向量可视化 tf2 版本\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1219,9 +1283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:NLP_DEMO]",
+   "display_name": "Python [conda env:tf2]",
    "language": "python",
-   "name": "conda-env-NLP_DEMO-py"
+   "name": "conda-env-tf2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1233,7 +1297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
